--- a/web3_tp_final/web3_tp_final/appsettings.json
+++ b/web3_tp_final/web3_tp_final/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SitAPupContext": "Data Source=c:\\sqlite\\sitapup.db;",
+    "AllowedHosts": "*"
+  }
 }
