--- a/web3_tp_final/web3_tp_final/appsettings.json
+++ b/web3_tp_final/web3_tp_final/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SitAPupContext": "Data Source=c:\\sqlite\\sitapup.db;",
+    "SitAPupContext": "Data Source=c:\\sqlite\\sitapup.db",
     "AllowedHosts": "*"
   }
 }
