--- a/web3_tp_final/web3_tp_final/web3_tp_final.csproj
+++ b/web3_tp_final/web3_tp_final/web3_tp_final.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\Details\" />
+  </ItemGroup>
+
 </Project>
